tests/ui/reborrow/coerce-shared-omitted-reborrow-field-locked.stderr
error[E0506]: cannot assign to `*wrapped.extra.value` because it is borrowed
  --> $DIR/coerce-shared-omitted-reborrow-field-locked.rs:48:5
   |
LL |     let shared = get(wrapped);
   |                      ------- `*wrapped.extra.value` is borrowed here
LL |
LL |     *wrapped.extra.value = 3;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `*wrapped.extra.value` is assigned to here but it was already borrowed
   |     borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
